# kaya

./: .gitignore  README.md  README_ru.md  pyproject.toml
db-srv/configs/: docker-compose.yaml  pg_hba.conf  postgresql.conf  qdrant_config.yaml
db-srv/scripts/: create_qdrant_collection.py  start-db.sh
docs/: architect.md  architect_en.md  architect_ru.md  release-1.0.0.md  release-1.0.0_ru.md.  version_1.1.0_guide.md
main-srv/: requirements.txt
main-srv/configs/: emb_srv_config.yaml  model_config.yaml  postgres_config.yaml  qdrant_config.yaml
main-srv/scripts/: model_orchestrator.sh  start_llama-server.sh
main-srv/src/: main.py  version.py
main-srv/src/db_manager/: db_manager.py
main-srv/src/db_manager/migrations/: V001_initial.sql  V002_dialogues.sql  V002_room_switching.sql  V003_message_normolize.sql  V003_pseudohormonal_system.sql  migration_manager.py  pg_migration_manager.py
main-srv/src/dialog_services/: dialogue_manager.py
main-srv/src/interfaces/: console_interface.py
main-srv/src/model_service/: model_service.py
main-srv/src/orchestrator/: context_builder.py  orchestrator.py  orchestrator_entry.py  preprocessor.py  response_composer.py
main-srv/src/pgs_service/: lifecycle_manager.py
main-srv/src/phs_service/: affective_analyzer.py  baseline_manager.py  lifecycle_manager.py  momentary_manager.py  phs_cache.py  phs_scheduler.py  state_classifier.py  valence_calculator.py  vector_encoder.py
main-srv/src/services/: service_metrics.py  tokens_counter.py
main-srv/src/session_services/: room_switch_manager.py  session_manager.py
(+5 files in other folders)
